Change chat AI from use invoke to astream sse